--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tPX-Wv-tYK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tPX-Wv-tYK">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--My Page-->
@@ -580,7 +580,7 @@
         <!--Store Map-->
         <scene sceneID="Ner-Td-T8x">
             <objects>
-                <viewController title="Store Map" id="iXQ-70-624" customClass="StoreMapViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StoreMapViewController" title="Store Map" id="iXQ-70-624" customClass="StoreMapViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yXn-Cz-aNo"/>
                         <viewControllerLayoutGuide type="bottom" id="DOF-Ja-hqJ"/>
