--- a/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
+++ b/MyPocketSBUX/MyPocketSBUX/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tPX-Wv-tYK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--My Page-->
@@ -269,26 +270,43 @@
         <scene sceneID="mC1-zj-2l0">
             <objects>
                 <tableViewController id="4jN-rE-chf" customClass="NewsTableViewController" customModule="MyPocketSBUX" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ozj-1m-qH9">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" id="Ozj-1m-qH9">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="defaultNewsTableViewCellIdentifier" textLabel="UjB-ja-A2j" style="IBUITableViewCellStyleDefault" id="jn4-L9-3od">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="defaultNewsTableViewCellIdentifier" rowHeight="70" id="jn4-L9-3od" customClass="NewsTableViewCell" customModule="MyPocketSBUX" customModuleProvider="target">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jn4-L9-3od" id="2uJ-un-gLc">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UjB-ja-A2j">
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6N-Ma-Ulh">
+                                            <rect key="frame" x="8" y="33" width="584" height="28"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="issue date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Yy-Ub-c8F">
+                                            <rect key="frame" x="8" y="8" width="584" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="C6N-Ma-Ulh" firstAttribute="trailing" secondItem="2uJ-un-gLc" secondAttribute="trailingMargin" id="8Bz-D1-1nG"/>
+                                        <constraint firstItem="C6N-Ma-Ulh" firstAttribute="leading" secondItem="2uJ-un-gLc" secondAttribute="leadingMargin" id="H75-qk-bdN"/>
+                                        <constraint firstItem="6Yy-Ub-c8F" firstAttribute="top" secondItem="2uJ-un-gLc" secondAttribute="topMargin" id="MZW-n9-xkX"/>
+                                        <constraint firstItem="6Yy-Ub-c8F" firstAttribute="leading" secondItem="2uJ-un-gLc" secondAttribute="leadingMargin" id="OLo-hR-alv"/>
+                                        <constraint firstItem="C6N-Ma-Ulh" firstAttribute="bottom" secondItem="2uJ-un-gLc" secondAttribute="bottomMargin" id="TMt-dE-L1L"/>
+                                        <constraint firstItem="C6N-Ma-Ulh" firstAttribute="top" secondItem="6Yy-Ub-c8F" secondAttribute="bottom" constant="8" id="a4s-YO-qX3"/>
+                                        <constraint firstItem="6Yy-Ub-c8F" firstAttribute="trailing" secondItem="2uJ-un-gLc" secondAttribute="trailingMargin" id="lml-u1-xTE"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="issueDateLabel" destination="6Yy-Ub-c8F" id="u5O-cr-zQL"/>
+                                    <outlet property="titleLabel" destination="C6N-Ma-Ulh" id="nVR-Q6-rbj"/>
                                     <segue destination="jLV-BI-eYl" kind="show" id="f04-Kz-JJI"/>
                                 </connections>
                             </tableViewCell>
@@ -627,7 +645,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ubM-Z0-5QU">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
